Firtst version commit

--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -1,1 +1,59 @@
+/*  
+Filename: app.css
+Student Name: Silvana Gjini
+StudentID: 301201477
+Date: 2-Jun-2022
+*/
+
 /* custom css here */
+body {
+    background-color: #f4f0f0;
+    font-family:helvetica-w01-light,helvetica-w02-light,sans-serif
+}
+
+/* Customizing navbar background color */
+.navbar-custom {
+    background-color: #bdb2af;  
+}
+
+/* Customizing homepage welcome note background color */
+
+.welcome-custom {
+    background-color: #bdb2af;
+
+}
+
+/* Customizing my services list background color */
+
+.my-services{
+    background-color: #bdb2af;
+
+}
+
+/* Customizing homepage background image */
+
+.background-custom {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center ; 
+}
+
+.project-one {
+    background-repeat: no-repeat;
+    background-position: center ; 
+    
+    
+}
+
+.project-three {
+    background-repeat: no-repeat;
+    background-position: center ; 
+    background-size: cover;
+    
+}
+
+.p1-content {
+    opacity: 1;
+    background-color: #bdb2af;
+}
+
