--- a/Server/Views/components/footer.ejs
+++ b/Server/Views/components/footer.ejs
@@ -1,3 +1,10 @@
+<!--
+       Filename: footer.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
+
 <nav class="navbar fixed-bottom  bg-light">
     <div class="container-fluid">
       <h5 id="copyright">&copy; Copyright 2022</h5>
