--- a/Server/Views/content/about.ejs
+++ b/Server/Views/content/about.ejs
@@ -1,3 +1,41 @@
+<!--
+       Filename: about.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
+
 <div class="container">
-    <h1><%= title %></h1>
+    <div class="row text-secondary text-center p-2">
+        <h2><%= title %></h2>
+    </div>
+    <div class="row">
+        <div class="col-md-3 bg-light mb-5 p-3">
+            <img src="./Assets/images/profilephoto.jpg" class="rounded mx-auto d-block" alt="profile photo">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-6 p-4 mb-5 border text-secondary">
+            
+            <p>
+                My name is Silvana Gjini. I was born and raised in a small town in Albania with my two older sisters and my younger brother. 
+                Being raised by two educator parents has boosted my interest in learning. 
+                I am always in search of learning new skills and improving myself.
+            </p> 
+            
+            <p>
+                I have a particular interest in learning foreign languages, and I am passionate about traveling and exploring new cultures.
+            </p>
+            <p>
+               I am fascinated by the profound effects the advances in computing and technology have had in evolving collective human and business intelligence through the development of software and tools which enhance people’s and corporations’ problem-solving abilities, creativity, data analysis and value extraction.
+            </p> 
+            <p>
+                For complete details about my professional background, please check my 
+               <a href="./Assets/documents/Silvana Gjini_Resume.pdf" target="_blank" >Curriculum Vitae</a>. 
+            </p>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+    
+        
+    
 </div>
