--- a/Server/Views/content/contact.ejs
+++ b/Server/Views/content/contact.ejs
@@ -1,3 +1,68 @@
+<!--
+       Filename: contact.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
 <div class="container">
-    <h1><%= title %></h1>
+    <div class="row text-secondary text-center p-2">
+        <h2><%= title %></h2>
+    </div>    
+    <div class="row">
+        <div class="col-md-5 text-center">
+            <h4 class="h1-responsive font-weight-bold text-center text-secondary my-2">Contact Information</h4>
+            <ul class="list-unstyled mb-0">
+                        <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                            <p>+1 647-768-6550</p>
+                        </li>
+        
+                        <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                            <p><a href="mailto:sgjini@my.centennialcollege.ca" class="text-decoration-none">sgjini@my.centennialcollege.ca</a> </p>
+                        </li>
+                        <li><i class="fa-brands fa-linkedin mt-4 fa-2x"></i>
+                           <p><a href="linkedin.com/in/silvana-gjini-48b34a55" target="_blank"></i>Linkedin</a> </p> 
+                            
+                        </li>
+                    </ul>
+                </div>
+
+                <!--Grid column-->
+                <div class="col-md-6 pr-5 pl-5 pb-5">
+                    <p class="w-responsive mx-auto text-secondary p-4">You can reach me out directly
+                        below and leave your contact details. 
+                        I am looking forward to hearing from you!</p>
+                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                                <div class="md-form p-2">
+                                    <input type="text" id="name" name="name" placeholder="Your name" class="form-control">
+                                    
+                                </div>
+                           
+                                <div class="md-form p-2">
+                                    <input type="text" id="email" name="email" placeholder="Your email" class="form-control">
+                                </div>
+                            
+                        
+                       
+                                <div class="md-form p-2">
+                                    <input type="text" id="subject" name="subject" placeholder="Subject" class="form-control">
+                                    
+                                </div>
+                          
+        
+                                <div class="md-form p-2">
+                                    <textarea type="text" id="message" name="message" rows="3" placeholder="Your message" class="form-control md-textarea"></textarea>
+                                    
+                                </div>
+                                
+                    </form>
+
+                    <div class="text-center text-md-left p-2">
+                        <a class="btn btn-secondary" id="send">Send</a>
+                    </div>
+                    <div class="status"></div>
+                </div>
+                <!--Grid column-->
+
+    </div>
 </div>
