--- a/Server/Views/content/home.ejs
+++ b/Server/Views/content/home.ejs
@@ -1,3 +1,38 @@
-<div class="container">
-    <h1><%= title %></h1>
+<!--
+       Filename: home.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
+<div class="container-fluid">
+    
+<!-- Background image -->
+<!--Background image provided by free images pixabay.com-->
+<div
+  class="bg-image d-flex justify-content-center align-items-center background-custom"
+  style="
+    background-image: url('./Assets/images/computer-gd44429522_1920.webp');  
+    height: 100vh;    
+  "
+>
+ <!--Grid Row-->
+ <div class="row w-100">
+     <!--Grid Column-->
+     <div class="col-md-8 "></div>
+     <!--Grid Column-->
+
+     <!--Grid Column-->
+     <div class="col-md-4 p-3 welcome-custom">
+         <h4>Hi, my name is Silvana!</h4>
+         <p>I believe in the never ending process of learning and improving yourself!</p>
+         <p>Welcome to my Portofolio website!</p>         
+         <a class="btn btn-secondary btn-sm" href="contact" role="button">Get in touch</a>
+     </div>
+     <!--Grid Column-->
+
+ </div>
+ <!--Grid Row-->
+</div>
+<!-- Background image -->
+    
 </div>
