--- a/Server/Views/content/projects.ejs
+++ b/Server/Views/content/projects.ejs
@@ -1,3 +1,122 @@
+<!--
+       Filename: projects.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
 <div class="container">
-    <h1><%= title %></h1>
+    <div class="row text-secondary text-center p-2">
+        <h2><%= title %></h2>
+    </div>
+    <!--Section: Content-->
+    <section class="text-center">
+        <!-- Background image -->
+        <!--Background image provided by https://upaycard.ufp-ks.com/-->
+        <div class="bg-image  project-one d-flex" style="background-image: url('./Assets/images/project01.JPG'); height: 75vh;">
+            <!--Background Mask-->
+            <div class="mask w-100 h-100 d-flex justify-content-center align-items-center " style="background-color: rgba(0, 0, 0, 0.8)">
+                
+                <!--Grid Row-->
+                <div class="row w-100">
+                    <!--Grid Column-->
+                    <div class="col-md-4"></div>
+                    <!--Grid Column-->
+
+                    <!--Grid Column Content-->
+                    <div class="col-md-4 text-light">
+                        <h4>UPay</h4>
+                        <h5>Prepaid Mastercard Project</h5>
+                        <p class="">The project consisted in introducing an new Prepaid Card in the market from the
+                            Mastercard preliminary testing and certification to card personalization, and transaction processing. 
+                        My contribution in this project includes but is not limited to:</p>
+                        <p class="">Developing the Card Management System (C#, SQL Server)</p>
+                        <p class="">Developing WebServices for data exchange between the Card Management System and the Core System</p>
+                        <p class="">Developing and updating packages for data processing in the Core System DB (Oracle PL/SQL)</p>
+                        <p class="">Testing and documentation</p>
+                    </div>
+                    <!--Grid Column-->
+
+                    <!--Grid Column-->
+                    <div class="col-md-4"></div>
+                    <!--Grid Column-->
+
+                </div>
+                <!--Grid Row-->
+             
+            </div>
+            <!--Background Mask-->
+        </div>
+        <!-- Background image -->
+
+    </section>
+    <!--Section: Content-->
+    <hr class="my-5" />
+    <!--Section: Content-->
+    <section class="text-center">
+        <!--Grid Row-->
+        <div class="row w-100">
+            <div class="col-md-6 gx-5 mb-4">
+                <!-- Background image -->
+                <div class="bg-image">
+                    <img src="./Assets/images/project02.JPG" class="img-fluid" />
+                </div>
+            </div>
+            <!-- Background image -->
+            
+            <div class="col-md-6 gx-5 mb-4 justify-content-center align-items-center ">
+                <h4><strong>Real estate web website</strong></h4>
+                <p class="text-muted">
+                    Developing a webpage for a Real Estate Agency (HTML, CSS, Javascript)
+                </p>
+                <p class="text-muted">
+                    The website consists in the homepage, the available proprieties page and a contact form.
+                </p>
+            </div>
+        </div>
+        <!--Grid Row-->
+    </section>
+    <!--Section: Content-->
+
+    <hr class="my-5" />
+    
+    <!--Section: Content-->
+    <section class="text-center">
+        <!-- Background image -->
+        <!--Background image provided by https://e-albania.al/Default.aspx-->
+        <div class="bg-image  project-three d-flex" style="background-image: url('./Assets/images/project03.JPG'); height: 75vh;">
+            <!--Background Mask-->
+            <div class="mask w-100 h-100 d-flex justify-content-center align-items-center " style="background-color: rgba(0, 0, 0, 0.8)">
+                
+                <!--Grid Row-->
+                <div class="row w-100">
+                    <!--Grid Column-->
+                    <div class="col-md-4"></div>
+                    <!--Grid Column-->
+
+                    <!--Grid Column Content-->
+                    <div class="col-md-4 text-light">
+                        <h4>e-Albania</h4>
+                        <h5>Electronic portal of the government of Albania</h5>
+                        <p class="">e-Albania is a portal that provides electronic public services 
+                            using the Government Interoperability Platform to connect systems with each other. My contribution in this project consists in:</p>
+                        <p class="">Conducting and documenting feasibility study</p>
+                        <p class="">Developing and documenting functional and technical requirements</p>
+                    </div>
+                    <!--Grid Column-->
+
+                    <!--Grid Column-->
+                    <div class="col-md-4"></div>
+                    <!--Grid Column-->
+
+                </div>
+                <!--Grid Row-->
+             
+            </div>
+            <!--Background Mask-->
+        </div>
+        <!-- Background image -->
+
+    </section>
+    <!--Section: Content-->
+    <hr class="my-5" />
 </div>
