--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -1,3 +1,49 @@
-<div class="container">
-    <h1><%= title %></h1>
+<!--
+       Filename: services.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
+<div class="container justify-content-center  align-items-center">
+    <div class="row text-secondary text-center p-2">
+        <h2><%= title %></h2>
+    </div>
+    <div class="section bg-image border border-3"
+    style="
+    background-image: url('./Assets/images/computer-gd44429522_1920.webp');  
+    height: 75vh;;    
+  ">
+        <div class="row justify-content-center align-items-center p-5">
+            <div class="col-md-3 gx-5 mb-4 text-dark text-center">
+                <h3>What I Offer.</h3>
+            </div>
+            <div class="col-md-6 gx-5 mb-4"></div>
+            
+        </div>
+
+        <div class="row">
+            <div class="col-md-6"></div>
+            
+            <div class="col-md-6 mb-5 my-services">
+                
+                       
+                    <h5> <i class="fa-solid fa-database  mt-4"></i> Database Design and Development</h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="fw-light fst-italic px-5">Oracle</li>
+                        <li class="fw-light fst-italic px-5">Microsoft SQL</li>
+                        <li class="fw-light fst-italic text-secondary px-5">MongoDB</li>
+                    </ul>
+                  
+
+                    <h5><i class="fa-solid fa-code"></i> Software Development</h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="fw-light fst-italic px-5">C#</li>
+                        <li class="fw-light fst-italic px-5">Javascript</li>
+                        <li class="fw-light fst-italic text-secondary px-5">Soon full stack developer (Express, React, Node JS)</li>
+                    </ul>
+                    <h5 class="mb-4"><i class="fa-solid fa-diagram-project mt-4"></i> Business Analysis</h5>   
+        </div>
+    </div>
+        
+    
 </div>
