--- a/Server/Views/error.ejs
+++ b/Server/Views/error.ejs
@@ -1,3 +1,9 @@
+<!--
+       Filename: error.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
