--- a/Server/Views/index.ejs
+++ b/Server/Views/index.ejs
@@ -1,3 +1,10 @@
+<!--
+       Filename: index.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
