--- a/Server/Views/components/header.ejs
+++ b/Server/Views/components/header.ejs
@@ -1,11 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<!--
+       Filename: header.ejs
+       Student Name: Silvana Gjini
+       Student ID:301201477
+       Date: 2-Jun-2022
+   -->
+<nav class="navbar navbar-expand-lg navbar-light navbar-custom">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-folder-open fa-lg"></i> Portofolio</a>
+    <a class="navbar-brand" href="/"><img src="./Assets/images/logo.png" alt="" width="40" height="34"></i> Silvana Gjini</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/home"><i class="fa-solid fa-house-signal fa-lg"></i> Home</a>
         </li>
@@ -13,7 +19,7 @@
           <a class="nav-link" aria-current="page" href="/about"><i class="fa-solid fa-info fa-lg"></i> About</a>
         </li>  
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/projects"><i class="fa-solid fa-diagram-project fa-lg"></i> My Projects</a>
+          <a class="nav-link" aria-current="page" href="/projects"><i class="fa-solid fa-diagram-project fa-lg"></i> Projects</a>
         </li>  
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/services"><i class="fa-solid fa-layer-group fa-lg"></i> Services</a>
