Assignment 1 complete version

--- a/Server/Views/content/about.ejs
+++ b/Server/Views/content/about.ejs
@@ -9,19 +9,23 @@
     <div class="row text-secondary text-center p-2">
         <h2><%= title %></h2>
     </div>
+    <!--Grid Row-->
     <div class="row">
+        <!--Grid Column Image-->
         <div class="col-md-3 bg-light mb-5 p-3">
             <img src="./Assets/images/profilephoto.jpg" class="rounded mx-auto d-block" alt="profile photo">
         </div>
+        <!--Grid Column Image-->
+        <!--Grid Column-->
         <div class="col-md-1"></div>
+        <!--Grid Column -->
+        <!--Grid Column Content-->
         <div class="col-md-6 p-4 mb-5 border text-secondary">
-            
             <p>
                 My name is Silvana Gjini. I was born and raised in a small town in Albania with my two older sisters and my younger brother. 
                 Being raised by two educator parents has boosted my interest in learning. 
                 I am always in search of learning new skills and improving myself.
             </p> 
-            
             <p>
                 I have a particular interest in learning foreign languages, and I am passionate about traveling and exploring new cultures.
             </p>
@@ -33,7 +37,10 @@
                <a href="./Assets/documents/Silvana Gjini_Resume.pdf" target="_blank" >Curriculum Vitae</a>. 
             </p>
         </div>
+        <!--Grid Column Content-->
+        <!--Grid Column -->
         <div class="col-md-2"></div>
+        <!--Grid Column -->
     </div>
     
         
