--- a/Server/Views/components/footer.ejs
+++ b/Server/Views/components/footer.ejs
@@ -5,8 +5,8 @@
        Date: 2-Jun-2022
    -->
 
-<nav class="navbar fixed-bottom  bg-light">
+<nav class="navbar fixed-bottom  bg-dark text-light">
     <div class="container-fluid">
-      <h5 id="copyright">&copy; Copyright 2022</h5>
+      <h6 id="copyright">&copy; Copyright 2022</h6>
     </div>
   </nav>
