--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -8,11 +8,13 @@
     <div class="row text-secondary text-center p-2">
         <h2><%= title %></h2>
     </div>
+    <!--Section: Content-->
     <div class="section bg-image border border-3"
     style="
     background-image: url('./Assets/images/computer-gd44429522_1920.webp');  
     height: 75vh;;    
   ">
+        <!--Grid Row-->  
         <div class="row justify-content-center align-items-center p-5">
             <div class="col-md-3 gx-5 mb-4 text-dark text-center">
                 <h3>What I Offer.</h3>
@@ -20,30 +22,30 @@
             <div class="col-md-6 gx-5 mb-4"></div>
             
         </div>
-
+        <!--Grid Row-->  
+        <!--Grid Row-->  
         <div class="row">
+            <!--Grid Column-->  
             <div class="col-md-6"></div>
-            
+            <!--Grid Column-->
+            <!--Grid Column Content-->
             <div class="col-md-6 mb-5 my-services">
-                
-                       
-                    <h5> <i class="fa-solid fa-database  mt-4"></i> Database Design and Development</h5>
-                    <ul class="list-unstyled mb-0">
-                        <li class="fw-light fst-italic px-5">Oracle</li>
-                        <li class="fw-light fst-italic px-5">Microsoft SQL</li>
-                        <li class="fw-light fst-italic text-secondary px-5">MongoDB</li>
-                    </ul>
-                  
-
-                    <h5><i class="fa-solid fa-code"></i> Software Development</h5>
-                    <ul class="list-unstyled mb-0">
-                        <li class="fw-light fst-italic px-5">C#</li>
-                        <li class="fw-light fst-italic px-5">Javascript</li>
-                        <li class="fw-light fst-italic text-secondary px-5">Soon full stack developer (Express, React, Node JS)</li>
-                    </ul>
-                    <h5 class="mb-4"><i class="fa-solid fa-diagram-project mt-4"></i> Business Analysis</h5>   
+                <h5> <i class="fa-solid fa-database  mt-4"></i> Database Design and Development</h5>
+                <ul class="list-unstyled mb-0">
+                    <li class="fw-light fst-italic px-5">Oracle</li>
+                    <li class="fw-light fst-italic px-5">Microsoft SQL</li>
+                    <li class="fw-light fst-italic text-secondary px-5">MongoDB</li>
+                </ul>
+                <h5><i class="fa-solid fa-code"></i> Software Development</h5>
+                <ul class="list-unstyled mb-0">
+                    <li class="fw-light fst-italic px-5">C#</li>
+                    <li class="fw-light fst-italic px-5">Javascript</li>
+                    <li class="fw-light fst-italic text-secondary px-5">Soon full stack developer (Express, React, Node JS)</li>
+                </ul>
+                <h5 class="mb-4"><i class="fa-solid fa-diagram-project mt-4"></i> Business Analysis</h5>   
+            </div>
+            <!--Grid Column Content-->
         </div>
-    </div>
-        
+     <!--Section: Content-->   
     
 </div>
